# medVtkInria

./: .gitignore  CMakeLists.txt  CMakePresets-Full.json  CMakePresets-Linux.json  CMakePresets-Original.json  CMakePresets-Windows.json  vcpkg.json
CMake/: MedInriaOSXBundleInfo.plist.in  SetupQt.cmake
Development/: CMakeLists.txt
Development/LAGUIExample3B/: CMakeLists.txt
Development/LAGUIExample3B/Include/: SliceChangedCommand.h  lavtkImageViewCornerAnnotation.h  lavtkViewImage2D.h
Development/LAGUIExample3B/src/: main.cxx
Development/QtLeakTestGUI0/: CMakeLists.txt
Development/QtLeakTestGUI0/Include/: FunctionProfiler.h  QtVTKRenderWindows.h  imageHelpers.h  smvtkImageView2DCommand.h
Development/QtLeakTestGUI0/src/: QtVTKRenderWindows.cxx  imageHelpers.cxx
Development/QtLeakTestGUI2/: CMakeLists.txt
Development/QtLeakTestGUI2/Include/: QtVTKRenderWindows.h
Development/QtLeakTestGUI2/src/: QtVTKRenderWindows.cxx  QtVTKRenderWindowsApp.cxx  imageHelpers.cxx  myVtkQtDebugLeaksModel.cxx  myVtkQtDebugLeaksView.cxx
Development/QtSinglePaneImageViewerWithDBTSupport0/: CMakeLists.txt
Development/QtSinglePaneImageViewerWithDBTSupport0/Include/: QtVTKRenderWindows.h
Development/QtSinglePaneImageViewerWithDBTSupport0/rc/: QtVTKRenderWindow.ui
Development/QtSinglePaneImageViewerWithDBTSupport0/src/: QtVTKRenderWindows.cxx
Development/QtSinglePaneImageViewerWithDBTSupport1/: CMakeLists.txt
Development/QtSinglePaneImageViewerWithDBTSupport1/Include/: QtVTKRenderWindows.h  smvtkImageView2D.h  smvtkImageView2DCommand.h
Development/QtSinglePaneImageViewerWithDBTSupport1/rc/: QtVTKRenderWindow.ui  QtVTKRenderWindow_vtk7.ui
Development/QtSinglePaneImageViewerWithDBTSupport1/src/: QtVTKRenderWindows.cxx  QtVTKRenderWindowsApp.cxx  smvtkImageView2D.cxx  smvtkImageView2DCommand.cxx
Development/SynchronizedViews0/: CMakeLists.txt  SynchronizedViews.cxx  smvtkInteractorEvent.cxx  smvtkInteractorEvent.h  smvtkInteractorEventSliceMove.cxx  smvtkInteractorEventSliceMove.h  smvtkInteractorEventWL.cxx  smvtkInteractorEventWL.h  smvtkInteractorStyle2D.cxx  smvtkInteractorStyle2D.h  smvtkInteractorStyleImageView2D.cxx  smvtkInteractorStyleImageView2D.h
Libraries/: CMakeLists.txt  medVtkInriaExport.h
Libraries/CMake/: medInriaConfig.cmake.in
Libraries/CMake/module/: list_header_directories_to_include.cmake  set_exe_install_rules.cmake  set_lib_install_rules.cmake  set_lib_properties_variables.cmake  set_plugin_install_rules.cmake
Libraries/HWShading/: vtkAnisoLiShadowMapSP.cxx  vtkAnisoLiShadowMapSP.h  vtkAnisotropicLightingSP.cxx  vtkAnisotropicLightingSP.h  vtkBMIAShaderProgram.cxx  vtkBMIAShaderProgram.h  vtkFiberMapper.cxx  vtkFiberMapper.h  vtkFragmentShader.cxx  vtkFragmentShader.h  vtkShaderBase.cxx  vtkShaderBase.h  vtkShaderBaseHandle.cxx  vtkShaderBaseHandle.h  vtkShaderObject.cxx  vtkShaderObject.h  vtkShaderObjectCollection.cxx  vtkShaderObjectCollection.h  vtkShaderUniform.cxx  vtkShaderUniform.h  vtkShaderUniformCollection.cxx  vtkShaderUniformCollection.h  vtkShadowMappingHelper.cxx  vtkShadowMappingHelper.h  vtkShadowMappingHelperLines.cxx  vtkShadowMappingHelperLines.h  vtkShadowMappingSP.cxx  vtkShadowMappingSP.h  vtkShadowRenderer.cxx  vtkShadowRenderer.h  vtkUniform.h  vtkUniformBool.cxx  vtkUniformBool.h  vtkUniformFloat.cxx  vtkUniformFloat.h  vtkUniformInt.cxx  vtkUniformInt.h  vtkUniformSampler.cxx  vtkUniformSampler.h  vtkUniformVec2.cxx  (+7 more)
Libraries/HWShading/cmake/: shader_to_header.cmake
Libraries/HWShading/shaders/: AnisoLiShadowMap.frag  AnisoLiShadowMap.vert  AnisotropicLighting.frag  AnisotropicLighting.func  AnisotropicLighting.vert  BuildShadowMap.frag  BuildShadowMapLines.frag  BuildShadowMapLines.vert  ShadowMapping.frag  ShadowMapping.vert  Spotlight.func
Libraries/tests/: CMakeLists.txt  vtkImageViewTest2.cxx  vtkImageViewTest4.cxx  vtkImageViewTest5.cxx
Libraries/tests/HWShadingTests/: alshader.prog  alshader.vert  alshaderpp.frag  fibermapper.cxx  ppshader.frag  ppshader.prog  shadows.cxx  standard.prog  standard.vert  texture.frag  texturemap.cxx
Libraries/tests/hide/: vtkImageFromBoundsSourceTest.cxx  vtkMetaImageDataTest.cxx
Libraries/tests/vtkHelpersTests/: CMakeLists.txt  sliceactor.cxx  tensors.vtk
Libraries/vtkImageView/: medVtkImageInfo.cpp  medVtkImageInfo.h  medVtkViewBackend.cpp  medVtkViewBackend.h  vtkAxes2DWidget.cxx  vtkAxes2DWidget.h  vtkDataSet2DWidget.cxx  vtkDataSet2DWidget.h  vtkImage2DDisplay.cpp  vtkImage2DDisplay.h  vtkImage3DDisplay.cpp  vtkImage3DDisplay.h  vtkImageView.cxx  vtkImageView.h  vtkImageView2D.cxx  vtkImageView2D.h  vtkImageView2DCommand.cxx  vtkImageView2DCommand.h  vtkImageView2DExtended.cxx  vtkImageView2DExtended.h  vtkImageView3D.cxx  vtkImageView3D.h  vtkImageView3DCroppingBoxCallback.cxx  vtkImageView3DCroppingBoxCallback.h  vtkImageViewCollection.cxx  vtkImageViewCollection.h  vtkImageViewCornerAnnotation.cxx  vtkImageViewCornerAnnotation.h  vtkImageViewCornerAnnotationEx.cxx  vtkImageViewCornerAnnotationEx.h  vtkInriaInteractorStyleRubberBandZoom.cxx  vtkInriaInteractorStyleRubberBandZoom.h  vtkInteractorStyleImageView2D.cxx  vtkInteractorStyleImageView2D.h
Libraries/vtkInriaPch/: vtkInriaPch.cpp  vtkInriaPch.h
Libraries/vtkVisuManagement/: vtkImageFromBoundsSource.cxx  vtkImageFromBoundsSource.h  vtkLookupTableManager.cxx  vtkLookupTableManager.h  vtkTessellatedSphereSource.cxx  vtkTessellatedSphereSource.h  vtkTransferFunctionPresets.cxx  vtkTransferFunctionPresets.h
Libraries/vtkVisuManagement/lut/: Asymmetry.h  BlackBody.h  CMakeLists.txt  Cardiac.h  Flow.h  GEColor.h  GrayRainbow.h  HotGreen.h  HotIron.h  HotMetal.h  LONI.h  LONI2.h  Spectrum.h  Stern.h  VRBones.h  VRMusclesBones.h  VRRedVessels.h  jet.h
Libraries/vtkWidgetsAddOn/: vtkDistanceWidget2.cxx  vtkDistanceWidget2.h  vtkImageOrientedPointWidget.cxx  vtkImageOrientedPointWidget.h  vtkInteractorStyleTrackballCamera2.cxx  vtkInteractorStyleTrackballCamera2.h  vtkOrientationAnnotation.cxx  vtkOrientationAnnotation.h  vtkOrientedBoxWidget.cxx  vtkOrientedBoxWidget.h  vtkRulerWidget.cxx  vtkRulerWidget.h
(+118 files in other folders)
